--- a/layouts/partials/comunicat/noticia.html
+++ b/layouts/partials/comunicat/noticia.html
@@ -8,7 +8,7 @@
               <!-- <td style="padding:10px 0 5px 25px">
                 <a style="font-family:Open Sans, sans-serif; font-size: 25px; color: #333; text-decoration: none;" href="{{ .Params.readmore }}">{{ .Title }}</a> 
               </td>-->
-              <td style="padding:10px 0 5px 25px; font-family:Open Sans, sans-serif; font-size: 25px; color: #333; text-decoration: none;">
+              <td style="padding:10px 25px 5px 25px; font-family:Open Sans, sans-serif; font-size: 25px; color: #333; text-decoration: none;">
                 {{ .Title }}
               </td>
             </tr>
