Correcció de rutes related sic i sgde. Correcció del peu del comunicat

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -136,6 +136,9 @@
 											<a href="mailto://oficina-tecnica.canigo.ctti@gencat.cat">oficina-tecnica.canigo.ctti@gencat.cat</a>
 										</li>
 										<li class="list-group-item bullet">
+											<a href="mailto://suport.cloud@gencat.cat">suport.cloud@gencat.cat</a>
+										</li>
+										<li class="list-group-item bullet">
 											<a href="http://cstd.ctti.gencat.cat/">Centre de Suport Tecnològic al Desenvolupament</a>
 										</li>
 									</ul>
