--- a/layouts/partials/breadcrumbs.html
+++ b/layouts/partials/breadcrumbs.html
@@ -30,7 +30,7 @@
 {{ end }}
 
 {{ if or (eq $title "clouds") (eq $section "cloud") }}
-	Cloud
+	Container Cloud
 {{ end }}
 
 {{ if in .URL "bloc_tags" }}
