--- a/layouts/partials/comunicat/header.html
+++ b/layouts/partials/comunicat/header.html
@@ -1,6 +1,6 @@
 <tr>
   <td>
-    <table width="100%" cellpadding="0" cellspacing="0" border="0" class="header-gen">
+    <table width="100%" cellpadding="0" cellspacing="0" border="0" class="header-gen" style="box-shadow: 0 1px 25px #ddd;">
       <tr>
         <td style="padding: 10px 50px 20px 50px; background-color: #333">
           <table width="100%" border="0" cellpadding="0" cellspacing="0">
