--- a/layouts/index.html
+++ b/layouts/index.html
@@ -68,7 +68,7 @@
 							<div class="inform_relacionada_cont">
 								<span class="enllac"><h4><strong>Roadmap de les solucions</strong></h4><span>
 								<div class="llistat_enllacos_filet llistat_enllacos_filet_cont">
-									<p><a href="/centre-de-suport/roadmap/" title="Accés al Roadmap de les solucions: Canigó, SIC, SGDE"><img src="/images/destacats/roadmap.png" alt="Roadmap" /></a></p>
+									<p><a href="/centre-de-suport/roadmap/" title="Accés al Roadmap de les solucions: Canigó, SIC, SGDE"><img src="/images/destacats/roadmap.PNG" alt="Roadmap" /></a></p>
 								</div>
 							</div>
 						</div>
