--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -29,7 +29,7 @@
 				<div class="collapse dos">
 					<div class="shadowBox">
 						<form class="navbar-form navbar-left primer" action="/cercador/" method="get"
- 						onsubmit="location.href=this.action+'#?query='+this.cerca_cap.value; return false;">
+ 						onsubmit="location.href=this.action+'?q='+this.cerca_cap.value; return false;">
 							<div class="form-group">
 								<input type="search" class="form-control" name="query" id="cerca_cap"
 									title="Cerca"
