--- a/layouts/partials/header_block.html
+++ b/layouts/partials/header_block.html
@@ -78,7 +78,7 @@
 
 								{{ if eq $title "cercador" }}
 								<!--CERCADOR-->
-								<form id="cercadorIndex" class="navbar-form cercador_vermell col-sm-3" method="get" action="/cercador/" onsubmit="searchResults(true); return false;">
+								<form id="cercadorIndex" class="navbar-form cercador_vermell col-sm-3" method="get" action="/cercador/" onsubmit="return false;">
 									<div class="form-group">
 										<input type="search" name="q" id="query"
 											title="Introdu&iuml;u les paraules a cercar"
