--- a/static/css/cercador.css
+++ b/static/css/cercador.css
@@ -1,6 +1,10 @@
 #stats{margin-bottom:2em;}
 /* HITS */
 
+.highlight_hit{
+  background-color: #f7ffd9; 
+}
+
 #hits div .destacat_text_cont h2{
   padding:0;
 }
@@ -41,15 +45,14 @@
 
 /* PAGINATION */
 #pagination {
-  margin-top: 60px;
+  /*margin-top: 60px;*/
 }
 #pagination ul {
-  font-size: 0;
   list-style-type: none;
   text-align: center;
 }
 #pagination li {
-  font-size: 14px;
+  font-size: 1.1em;
   display: inline;
   padding: .5em;
 }
@@ -57,13 +60,13 @@
   padding: 8px 12px;
   text-decoration: none;
   color: #BF0000;
-  font-weight: bolder;
 }
 
 #pagination a:hover {
-  background: #f5f5f5;
+  background: #ddd;
 }
-#pagination li:first-child a {
+
+/*#pagination li:first-child a {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
@@ -71,11 +74,12 @@
   border-right: 1px solid #eee;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-}
+}*/
+
 #pagination li.ais-pagination--item__active a {
   color: #BF0000;
-  border-color: #ed5565;
-  background: #ed5565;
+  border-color: #ccc;
+  background: #ddd;
 }
 #pagination li.ais-pagination--item__active a:hover {
   cursor: default;
