--- a/static/css/cercador.css
+++ b/static/css/cercador.css
@@ -1,5 +1,8 @@
 #stats{margin-bottom:2em;}
 
+#logo-algolia{float:right;}
+#logo-algolia img{width:75px;}
+
 /* HIDE LONG TEXT */
 
 /* styles for '...' */ 
