--- a/layouts/index.html
+++ b/layouts/index.html
@@ -129,17 +129,11 @@
 -->
 						<div class="inform_relacionada">
 							<div class="inform_relacionada_cont">
-								<h4><strong>Contacta amb el Centre de Suport</strong></h4>
+								<h4><strong>Contacta</strong></h4>
 								<div class="llistat_enllacos_filet">
 									<ul class="llistat_enllacos_filet_cont icones list-group">
 										<li class="list-group-item bullet">
-											<a href="mailto://oficina-tecnica.canigo.ctti@gencat.cat">oficina-tecnica.canigo.ctti@gencat.cat</a>
-										</li>
-										<li class="list-group-item bullet">
-											<a href="mailto://suport.cloud@gencat.cat">suport.cloud@gencat.cat</a>
-										</li>
-										<li class="list-group-item bullet">
-											<a href="http://cstd.ctti.gencat.cat/">Centre de Suport Tecnològic al Desenvolupament</a>
+											<a href="/cs">Centres de suport</a>
 										</li>
 									</ul>
 								</div>
