--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -64,4 +64,25 @@ if(location.hostname!=="localhost"){
 
 </script>
 
+<script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
+<script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
+<script>
+  var client = algoliasearch('EWLW9DD0B6', 'fb84eb986e0a351c3f12f948e3ee99b8')
+  var index = client.initIndex('arquitectura');
+  autocomplete('#cerca2', {hint: false}, [
+    {
+      source: autocomplete.sources.hits(index, {hitsPerPage: 5}),
+      displayKey: 'title',
+      templates: {
+        suggestion: function(suggestion) {
+          return suggestion._highlightResult.title.value;
+        }
+      }
+    }
+  ]).on('autocomplete:selected', function(event, suggestion, dataset) {
+    console.log(suggestion.path, dataset);
+    window.location.replace(suggestion.path);
+  });
+</script>
+
 {{ end }}
