--- a/static/css/cercador.css
+++ b/static/css/cercador.css
@@ -3,6 +3,15 @@
 #logo-algolia{float:right;}
 #logo-algolia img{width:75px;}
 
+#left-column h3{
+  margin-top:0!important;
+}
+
+.chart{
+  padding:0px;
+  margin-top:-30px;
+} 
+
 /* HIDE LONG TEXT */
 
 /* styles for '...' */ 
@@ -74,6 +83,9 @@
 }
 
 /* FACETS */
+.facet{
+  font-size:.8em;
+}
 .ais-refinement-list--count,
 .ais-menu--count {
   position: relative;
@@ -82,6 +94,7 @@
 }
 .ais-refinement-list--count{
   padding-left: .5em;
+  padding-top: .2em;
 }
 
 .ais-refinement-list--label input{
@@ -95,6 +108,8 @@
 .ais-refinement-list--count::after{
   content : ")";
 }
+
+.ais-refinement-list--list{margin-bottom:2em;}
 
 /* PAGINATION */
 #pagination {
