--- a/layouts/partials/comunicat/social-media.html
+++ b/layouts/partials/comunicat/social-media.html
@@ -1,17 +1,40 @@
+ <img src="http://canigo.ctti.gencat.cat/images/comunicats/shadow_bottom_footer.jpg" class="sombra">
+ 
+ <hr class="footer_separator" />
+ 
+ <div class="footer">
+    <div class="footer_text">
+        <p>
+            <strong style="color:#656565;"><a href="http://web.gencat.cat/ca/menu-ajuda/ajuda/avis_legal/">Avís legal:</a></strong> La ©Generalitat de Catalunya permet la reutilizació de les dades sempre que se citi la font i la data d´actualizació, que no es desnaturalitzi la informació i que no es contradigui amb una llicència específica.
+        </p>
+        <p>
+            Pot donar de baixa la seva subscripció a aquest butlletí accedint a <a href="http://butlletins.gencat.cat/pres_push/AppJava/subscribe.do">aquest enllaç</a>.
+        </p>
+    </div>
+    <img class="footer_logo" src="http://canigo.ctti.gencat.cat/images/comunicats/logo-generalitat_gris.png" />
+    <div class="link_amunt">
+        <a href="#amunt">
+            <img src="http://canigo.ctti.gencat.cat/images/comunicats/expanded.png" border="0" alt="">
+        </a>
+        <a style="font-family:Open Sans, sans-serif; font-size: 10px;padding: 0px 10px 0px 0px;color:#333;" href="#amunt">
+            <strong>AMUNT</strong>
+        </a>
+    </div>
+ </div>
+<!--
 <tr>
   <td bgcolor="#eeeeee">
-    <!--shadow-->
 
     <table width="100%" cellspacing="0" class="shadow" style="border-collapse:collapse;border-spacing:0px;">
       <tr>
         <td style="padding: 0px">
-          <img src="http://canigo.ctti.gencat.cat/images/comunicats/shadow_bottom_footer.jpg" border="0" alt="">
+         
         </td>
       </tr>
     </table>
   </td>
 </tr>
-<!--end shadow-->
+
 <tr>
   <td>
     <table width="100%" bgcolor="#eeeeee" border="0" cellspacing="0" cellpadding="0" style="padding-bottom:20px">
@@ -73,3 +96,4 @@
     </table>
   </td>
 </tr>
+-->
