--- a/layouts/partials/comunicat/destacat.html
+++ b/layouts/partials/comunicat/destacat.html
@@ -1,32 +1,12 @@
-<tr>
-  <td style="padding: 0px 20px 20px 20px;">
-    <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border:1px solid #ddd;background-color: #fff;" class="shadow">
-      <tr>
-        <td>
-          <table width="100%" border="0" cellpadding="0" cellspacing="0">
-            <tr>
-              <td style="padding: 20px;">
-                <table border="0" cellspacing="0" cellpadding="0">
-                  <tr>
-                    <td style="font-family:Open Sans, sans-serif; color: #333; font-size: 16px; text-decoration: none; font-weight: 600;">
-            					{{ if isset .Params "enllac" }}
-            						<a style="color: #333" href="{{ .Params.enllac }}">{{ .Title }} </a>
-            					{{ else }}
-            						{{ .Title }}
-            					{{ end}}
-                    </td>
-                  </tr>
-                  <tr>
-                    <td style="font-family:Open Sans, sans-serif; color: #666; font-size: 14px; padding: 8px 0;line-height:17px">
-                      {{ .Description }}
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-		  </table>
-        </td>
-      </tr>
-    </table>
-  </td>
-</tr>
+<div class="destacat">
+    <div class="destacat_title">
+        {{ if isset .Params "enllac" }}
+            <a href="{{ .Params.enllac }}">{{ .Title }}</a>
+        {{ else }}
+            {{ .Title }}
+        {{ end}}
+    </div>
+    <div class="destacat_text">
+        {{ .Description }}
+    </div>
+</div>
