--- a/layouts/partials/comunicat/grafica.html
+++ b/layouts/partials/comunicat/grafica.html
@@ -1,17 +1,37 @@
-<div class="grafica">
-    <div class="grafica_title">
-        {{ .Params.grafica.titol }}
-    </div>
-    <div class="grafica_desc">
-        {{ .Params.grafica.descripcio }}
-    </div>
-    <div class="grafica_img">
-        {{ $anymes := .Date.Format "/2006/01/" }}
-        {{ $imgurl := print "/related/cs" $anymes .Params.grafica.imatge }}
-        <script>
-            console.info('{{ $anymes }}');
-            console.info('{{ $imgurl }}');
-        </script>
-        <img src="{{ $imgurl }}" alt="{{ .Params.grafica.alt }}" />
-    </div>
-</div>
+<tr style="background-color: #eeeeee;">
+  <td style="padding: 0px 20px 20px 20px;">
+    <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border:1px solid #ddd;background-color: #fff;">
+      <tr>
+        <td>
+          <table width="100%" border="0" cellpadding="0" cellspacing="0">
+            <tr>
+              <td style="padding: 20px;">
+                <table border="0" cellspacing="0" cellpadding="0" width="100%">
+                  <tr>
+                    <td style="font-family:Open Sans, sans-serif; color: #333; font-size: 16px; text-decoration: none; font-weight: 600;">
+                      {{ .Params.grafica.titol }}
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="text-align: justify; font-family:Open Sans, sans-serif; color: #666; font-size: 14px; padding: 8px 25px;line-height:17px">
+                      <p>{{ .Params.grafica.descripcio }}</p>
+                      <p style="text-align: center">
+                        {{ $anymes := .Date.Format "/2006/01/" }}
+                        {{ $imgurl := print "/related/cs" $anymes .Params.grafica.imatge }}
+                        <script>
+                          console.info('{{ $anymes }}');
+                          console.info('{{ $imgurl }}');
+                        </script>
+                        <img src="{{ $imgurl }}" alt="{{ .Params.grafica.alt }}" />
+                      </p>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+  </td>
+</tr>
