--- a/layouts/partials/comunicat/header.html
+++ b/layouts/partials/comunicat/header.html
@@ -1,21 +1,39 @@
-<div id="header">
-    <img id="logo" src="http://canigo.ctti.gencat.cat/images/comunicats/logo-generalitat.png" alt="Generalitat de Catalunya" />
-    
-    <p id="title">
-        {{ .Site.Data.parametres_comunicat.Titol }}
-    </p>
-    
-    <p id="subtitle">
-        {{ .Site.Data.parametres_comunicat.Subtitol }}
-    </p>
-    
-    <p id="department">
-        {{ .Site.Data.parametres_comunicat.Departament }}
-    </p>
-    
-    <p id="altres">
-         {{ $nommes := index  .Site.Data.parametres_comunicat.mesos (.Date.Format "January") }}
-        {{ $numany := .Date.Format "2006" }}
-        {{ print $nommes " " $numany }}
-    </p>
-</div>
+<tr>
+  <td>
+    <table width="100%" cellpadding="0" cellspacing="0" border="0" class="header-gen" style="box-shadow: 0 1px 25px #ddd;">
+      <tr>
+        <td style="padding: 10px 50px 20px 50px; background-color: #333">
+          <table width="100%" border="0" cellpadding="0" cellspacing="0">
+            <tr>
+              <td align="left">
+                <img src="http://canigo.ctti.gencat.cat/images/comunicats/logo-generalitat.png" width="101" height="26" border="0" alt="" />
+              </td>
+            </tr>
+            <tr>
+              <td style="font-family:Open Sans, sans-serif; font-size: 35px; padding-top: 15px; color: #fff;">
+               {{ .Site.Data.parametres_comunicat.Titol }}
+              </td>
+            </tr>
+            <tr>
+              <td style="font-family:Open Sans, sans-serif; font-size: 18px; padding-top: 5px; color: #fff;">
+               {{ .Site.Data.parametres_comunicat.Subtitol }}
+              </td>
+            </tr>
+            <tr>
+              <td style="font-family:Open Sans, sans-serif; font-size: 14px; padding-top: 5px; color: #fff;">
+                {{ .Site.Data.parametres_comunicat.Departament }}
+              </td>
+            </tr>
+            <tr>
+              <td style="font-family:Open Sans, sans-serif; font-size: 14px; padding-top: 5px; color: #fff;">
+                {{ $nommes := index  .Site.Data.parametres_comunicat.mesos (.Date.Format "January") }}
+                {{ $numany := .Date.Format "2006" }}
+                {{ print $nommes " " $numany }}
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+  </td>
+</tr>
