--- a/layouts/partials/comunicat/relacionats.html
+++ b/layouts/partials/comunicat/relacionats.html
@@ -1,21 +1,52 @@
-<div class="relacionats">
-    <div class="relacionats_title">
-        HowTo's Frameworks i Solucions d'Arquitectura
-    </div>
-    <ul>
-        {{ range .Params.relacionats }}
-        <li class="relacionat_content">
-            <p class="relacionat_title">
-                {{ .doctitle }}
-            {{ $imgurl := print "/img/ico_descarregable_" .doctype ".png" }}
-            <a href="{{ .docurl }}" target="_blank">
-                <img src="{{ $imgurl }}" />
-            </a>
-            </p>
-            <div class="relacionat_desc">
-                {{ .docdescription }}
-            </div>
-        </li>
-        {{ end }}
-    </ul>
-</div>
+<tr>
+  <td>
+    <table width="100%" border="0" cellspacing="0" cellpadding="0" align="left" class="content-news-text">
+      <tr>
+        <td style="padding: 0px 20px; background-color: #eeeeee" >
+          <table width="100%" border="0" cellpadding="0" cellspacing="0" style="border:1px solid #ddd;background-color: #fff;">
+            <tr>
+              <td class="content-text">
+                <table border="0" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td style="padding: 20px 0px 0px 20px;background-color: #fff">
+                      <h2 style="font-family:Open Sans, sans-serif; color: #333; font-size: 20px; text-decoration: none; font-weight: 600;">
+                       HowTo's Frameworks i Solucions d'Arquitectura
+                      </h2>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="content-text">
+                      <table>
+                        <tr>
+                          <td style="font-family:Open Sans, sans-serif; color: #666; font-size: 14px; line-height:17px">
+                            <ul style="padding-left: 32px;" class="download_pdf">
+                              {{ range .Params.relacionats }}
+                              <li style="color: #cc3333;">
+                                <p style="font-family:Open Sans, sans-serif; font-size: 14px; color: #333; font-weight:600">
+                                  {{ .doctitle }}
+                                  {{ $imgurl := print "/img/ico_descarregable_" .doctype ".png" }}
+                                  <a href="{{ .docurl }}" target="_blank">
+                                    <img src="{{ $imgurl }}" />
+                                  </a>
+                                  <br />
+                                  <span style="font-family:Open Sans, sans-serif; font-size: 14px; color: #333; font-weight:300">
+                                    {{ .docdescription }}
+                                  </span>
+                                </p>
+                              </li>
+                              {{ end }}
+                            </ul>
+                          </td>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+  </td>
+</tr>
