--- a/layouts/partials/comunicat/destacat.html
+++ b/layouts/partials/comunicat/destacat.html
@@ -1,5 +1,5 @@
 <tr>
-  <td style="padding: 0px 20px 20px 20px;">
+  <td class="destacat_box">
     <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border:1px solid #ddd;background-color: #fff;" class="shadow">
       <tr>
         <td>
