--- a/layouts/partials/comunicat/grafica.html
+++ b/layouts/partials/comunicat/grafica.html
@@ -1,5 +1,5 @@
 <tr style="background-color: #eeeeee;">
-  <td style="padding: 0px 20px 20px 20px;">
+  <td class="grafica_box">
     <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border:1px solid #ddd;background-color: #fff;">
       <tr>
         <td>
@@ -22,7 +22,7 @@
                           console.info('{{ $anymes }}');
                           console.info('{{ $imgurl }}');
                         </script>
-                        <img src="{{ $imgurl }}" alt="{{ .Params.grafica.alt }}" />
+                        <img src="{{ $imgurl }}" alt="{{ .Params.grafica.alt }}" style="width: 100%" />
                       </p>
                     </td>
                   </tr>
