--- a/layouts/partials/comunicat/noticia.html
+++ b/layouts/partials/comunicat/noticia.html
@@ -1,5 +1,5 @@
 <tr>
-  <td style="background-color: #eeeeee; padding: 20px;">
+  <td class="noticia_box">
     <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border:1px solid #ddd;background-color: #fff">
       <tr>
         <td>
@@ -21,8 +21,8 @@
               <td style="padding:5px 20px 15px 25px">
                 <table bgcolor="#333333" border="0" cellspacing="0" cellpadding="0">
                   <tr>
-                    <td style="text-align: center; font-size: 14px; font-family:Open Sans, sans-serif; padding: 0 10px 0 10px;" height="25">
-                      <a style="font-family:Open Sans, sans-serif; color: #ffffff; text-decoration: none;" href="{{ .RelPermalink }}">Llegiu més</a>
+                    <td class="llegiu_mes">
+                      <a href="{{ .RelPermalink }}">Llegiu més</a>
                     </td>
                   </tr>
                 </table>
