--- a/layouts/partials/comunicat/social-media.html
+++ b/layouts/partials/comunicat/social-media.html
@@ -31,7 +31,7 @@
               <td>
                 <table align="left" class="pl-15">
                   <tr>
-                    <td><img src="http://canigo.ctti.gencat.cat/images/comunicats/logo-generalitat_gris.png" width="101px" height="26" border="0" alt="">
+                    <td><img id="logo_bottom" src="http://canigo.ctti.gencat.cat/images/comunicats/logo-generalitat_gris.png" width="101px" height="26" border="0" alt="">
                     </td>
                   </tr>
                 </table>
@@ -39,7 +39,7 @@
               <td colspan="2">
                 <table align="left" style="margin-left: 20px; width:90%">
                   <tr>
-                    <td class="avis_legal" style="font-family:Open Sans, sans-serif; font-size: 10px; padding:0px; color:#656565;"><strong style="color:#656565;"><a href="http://web.gencat.cat/ca/menu-ajuda/ajuda/avis_legal/" style="text-decoration: none;">Avís legal:</a></strong> La ©Generalitat de Catalunya permet la reutilizació de les dades sempre que se citi la font i la data d´actualizació, que no es desnaturalitzi la informació i que no es contradigui amb una llicència específica.</td>
+                    <td class="avis_legal"><strong style="color:#656565;"><a href="http://web.gencat.cat/ca/menu-ajuda/ajuda/avis_legal/" style="text-decoration: none;">Avís legal:</a></strong> La ©Generalitat de Catalunya permet la reutilizació de les dades sempre que se citi la font i la data d´actualizació, que no es desnaturalitzi la informació i que no es contradigui amb una llicència específica.</td>
                   </tr>
                   <tr>
                   <td class="avis_legal" style="font-family:Open Sans, sans-serif; font-size: 10px; padding:0px; color:#656565;">Pot donar de baixa la seva subscripció a aquest butlletí accedint a <a href="http://butlletins.gencat.cat/pres_push/AppJava/subscribe.do" style="text-decoration: none;">aquest enllaç</a>.</td>
@@ -47,27 +47,25 @@
                 </table>
               </td>
             </tr>
-            <tr>
-              <td>&nbsp;</td>
-              <td width="79%">&nbsp;</td>
-              <td width="11%">
-                <table class="  amunt" style="float:right; margin-top:10px" align="right" width="100%">
-                  <tr>
-                    <td style="padding: 0px 10px;" width="18px">
-                      <a href="#amunt">
-                        <img src="http://canigo.ctti.gencat.cat/images/comunicats/expanded.png" border="0" alt="">
-                      </a>
-                    </td>
-                    <td align="left">
-                      <a style="font-family:Open Sans, sans-serif; font-size: 10px;padding: 0px 10px 0px 0px;color:#333;" href="#amunt">
-                        <strong>AMUNT</strong>
-                      </a>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
           </table>
+        </td>
+      </tr>
+      <tr>
+        <td>
+            <table class="amunt">
+                <tr>
+                <td style="padding: 0px 10px;" width="18px">
+                    <a href="#amunt">
+                    <img src="http://canigo.ctti.gencat.cat/images/comunicats/expanded.png" border="0" alt="">
+                    </a>
+                </td>
+                <td align="left">
+                    <a style="font-family:Open Sans, sans-serif; font-size: 10px;padding: 0px 10px 0px 0px;color:#333;" href="#amunt">
+                    <strong>AMUNT</strong>
+                    </a>
+                </td>
+                </tr>
+            </table>
         </td>
       </tr>
     </table>
