--- a/layouts/partials/comunicat/relacionats.html
+++ b/layouts/partials/comunicat/relacionats.html
@@ -2,7 +2,7 @@
   <td>
     <table width="100%" border="0" cellspacing="0" cellpadding="0" align="left" class="content-news-text">
       <tr>
-        <td style="padding: 0px 20px; background-color: #eeeeee" >
+        <td class="relacionat_box">
           <table width="100%" border="0" cellpadding="0" cellspacing="0" style="border:1px solid #ddd;background-color: #fff;">
             <tr>
               <td class="content-text">
