--- a/layouts/partials/comunicat/style.html
+++ b/layouts/partials/comunicat/style.html
@@ -199,7 +199,7 @@
   }
   
     table.amunt {
-       width: 100%;
+       width: 250px; 
        text-align: right;
        margin-top:10px;
        text-align: right;
