--- a/layouts/partials/comunicat/noticia.html
+++ b/layouts/partials/comunicat/noticia.html
@@ -19,7 +19,7 @@
             </tr>
             <tr>
               <td style="padding:5px 20px 15px 25px">
-                <table bgcolor="#333333" border="0" cellspacing="0" cellpadding="0">
+                <table border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td class="llegiu_mes">
                       <a href="{{ .RelPermalink }}">Llegiu més</a>
