--- a/layouts/partials/comunicat/social-media.html
+++ b/layouts/partials/comunicat/social-media.html
@@ -19,7 +19,7 @@
         <td class="p-0-20">
           <table width="100%">
             <tr>
-              <td colspan="3">
+              <td>
                 <table width="100%">
                   <tr>
                     <td style="background: #ddd;height: 0px;"></td>
@@ -36,7 +36,13 @@
                   </tr>
                 </table>
               </td>
-              <td colspan="2">
+            </tr>
+            <tr>
+              <td>&nbsp;
+              </td>
+            </tr>
+            <tr>
+              <td>
                 <table align="left" style="margin-left: 20px; width:90%">
                   <tr>
                     <td class="avis_legal"><strong style="color:#656565;"><a href="http://web.gencat.cat/ca/menu-ajuda/ajuda/avis_legal/" style="text-decoration: none;">Avís legal:</a></strong> La ©Generalitat de Catalunya permet la reutilizació de les dades sempre que se citi la font i la data d´actualizació, que no es desnaturalitzi la informació i que no es contradigui amb una llicència específica.</td>
