--- a/layouts/partials/comunicat/style.html
+++ b/layouts/partials/comunicat/style.html
@@ -178,11 +178,13 @@
   }
   
   td.llegiu_mes  {
+    background-color: #333333;
     text-align: center;
     font-size: 14px;
     font-family: OpenSansRegular, Open Sans, sans-serif;
     padding: 0 10px 0 10px;
     height: 25px;
+    width: 125px;
   }
   
   td.llegiu_mes > a {
@@ -270,6 +272,9 @@
     padding: 0px !important;
     }
   
+    td.llegiu_mes {
+        padding: 3px 0px 0px 0px;
+    }
     .content-news-text .content-text {
       padding: 20px;
     }
@@ -283,6 +288,7 @@
     
     img#logo_bottom {
         display: block;
+        width: 100%;
         margin: 10px;
         width: 101px;
         margin: 25px 0px 0px 15px;
@@ -291,9 +297,8 @@
     
     td.avis_legal {
         display: block;
-        width: 70%; 
-        float: right;
-        top: -35px;
+        width: 100%; 
+        top: 15px;
         position: relative;
         
     }
